@@ -112,7 +112,7 @@ OUT=$TMPDIR/addmodem$$         # temp file in which modem output is recorded
 SVR4UULCKN=$LIBEXEC/lockname	# SVR4 UUCP lock name construction program
 ONDELAY=$LIBEXEC/ondelay	# prgm to open devices blocking on carrier
 CAT="$CAT -u"			# something to do unbuffered reads and writes
-FAX=fax				# identity of the fax user
+FAX=@FAXUID@			# identity of the fax user
 GROUP=/etc/group		# where to go for group entries
 PROTOGID=@FAXGID@		# group who's gid we use for FAX user
 defPROTOGID=10			# use this gid if PROTOGID doesn't exist
