@@ -41,7 +41,7 @@ AGEINFO=30			# purge remote info after 30 days inactivity
 AGELOG=30			# keep log info for last 30 days
 AGERCV=7			# purge received facsimile after 7 days
 AGETMP=1			# purge orphaned temp files after 1 day
-FAXUSER=fax			# owner of log files
+FAXUSER=@FAXUID@		# owner of log files
 LOGMODE=0644			# mode for log files
 XFERLOG=etc/xferfaxlog		# HylaFAX xferfaxlog file location
 LAST=etc/lastrun		# file where time+date of last run recorded
